--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <UseWPF>true</UseWPF>
-    <Nullable>enable</Nullable>
+    <UseWPF>True</UseWPF>
+    <UseWindowsForms>True</UseWindowsForms>
+    <Nullable>Enable</Nullable>
     <ApplicationIcon>Icon/icon256.ico</ApplicationIcon>
   </PropertyGroup>
 
@@ -11,24 +12,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Icon\Icon256.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
+    <Resource Include="Icon\Icon256.ico" />
+    <Resource Include="Icon\Icon256.png" />
+    <Resource Include="Icon\Icon32.ico" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <Platforms>x64</Platforms>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
-    <PublishSingleFile>True</PublishSingleFile>
     <PublishTrimmed>False</PublishTrimmed>
-    <PublishReadyToRun>False</PublishReadyToRun>
+    <PublishSingleFile>True</PublishSingleFile>
+    <PublishReadyToRun>True</PublishReadyToRun>
     <PublishReadyToRunShowWarnings>True</PublishReadyToRunShowWarnings>
     <DeleteExistingFiles>True</DeleteExistingFiles>
     <Optimize>True</Optimize>
+    <SelfContained>False</SelfContained>
     <NoStandardLibraries>True</NoStandardLibraries>
+    <TieredCompilationQuickJit>True</TieredCompilationQuickJit>
   </PropertyGroup>
   
   <PropertyGroup>
