--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="4.1.0" />
     <PackageReference Include="ModernWpfUI" Version="0.9.1" />
   </ItemGroup>
 
@@ -20,11 +21,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <Platforms>x64</Platforms>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <PublishTrimmed>False</PublishTrimmed>
-    <PublishSingleFile>True</PublishSingleFile>
+    <PublishSingleFile>False</PublishSingleFile>
     <PublishReadyToRun>True</PublishReadyToRun>
     <PublishReadyToRunShowWarnings>True</PublishReadyToRunShowWarnings>
     <DeleteExistingFiles>True</DeleteExistingFiles>
