--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -9,7 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="4.1.0" />
+    <PackageReference Include="DotNetZip" Version="1.13.8" />
     <PackageReference Include="ModernWpfUI" Version="0.9.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,7 +31,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <Platforms>x64</Platforms>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>net452</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <PublishTrimmed>False</PublishTrimmed>
