--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.1" />
     <PackageReference Include="Costura.Fody" Version="4.1.0" />
     <PackageReference Include="DotNetZip" Version="1.13.8" />
     <PackageReference Include="ModernWpfUI" Version="0.9.1" />
