--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -28,6 +28,18 @@
   <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Update="AutoUpdate\DownloadUpdateWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Page Update="AutoUpdate\DownloadUpdateWindow.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
