--- a/EZBlocker3/Properties/Settings.settings
+++ b/EZBlocker3/Properties/Settings.settings
@@ -35,5 +35,8 @@
     <Setting Name="StartWithSpotify" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="LastUpdateCheck" Type="System.Nullable`1[System.DateTime]" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
