--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="ModernWpf.MessageBox" Version="0.2.0" />
     <PackageReference Include="ModernWpfUI" Version="0.9.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="WinEventHook" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
