Fix #1; Add setting to assume unknown state is caused by advertisment.

--- a/EZBlocker3/Properties/Settings.settings
+++ b/EZBlocker3/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="LastUpdateCheck" Type="System.Nullable`1[System.DateTime]" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AssumeAdOnUnknownState" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
