Fix compiler warnings

--- a/EZBlocker3/EZBlocker3.csproj
+++ b/EZBlocker3/EZBlocker3.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="5.0.2" PrivateAssets="All" />
     <PackageReference Include="Lazy.Fody" Version="1.9.0" PrivateAssets="All" />
     <PackageReference Include="ModernWpf.MessageBox" Version="0.4.2" />
