--- a/EZBlocker3/Properties/Settings.settings
+++ b/EZBlocker3/Properties/Settings.settings
@@ -41,7 +41,7 @@
     <Setting Name="LastUpdateCheck" Type="System.Nullable`1[System.DateTime]" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="AssumeAdOnUnknownState" Type="System.Boolean" Scope="User">
+    <Setting Name="AggressiveMuting" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Hook" Type="System.String" Scope="User">
